Bug 239175 - Paragraph border are not drawn
Summary: Paragraph border are not drawn
Status: VERIFIED FIXED
Alias: None
Product: calligracommon
Classification: Applications
Component: text-layout (other bugs)
Version First Reported In: unspecified
Platform: unspecified All
: NOR normal
Target Milestone: ---
Assignee: Calligra Words Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-09-09 10:41 UTC by Lassi Nieminen
Modified: 2011-11-02 09:50 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
msword test document to be opened in kword (23.00 KB, application/octet-stream)
2009-09-09 10:41 UTC, Lassi Nieminen
Details
screenshot of the document in kword (149.18 KB, image/x-png)
2009-09-09 10:41 UTC, Lassi Nieminen
Details
screenshot of the document in msword (72.83 KB, image/x-png)
2009-09-09 10:42 UTC, Lassi Nieminen
Details
Another test data with same issue (19.50 KB, application/octet-stream)
2011-04-29 13:09 UTC, swathi
Details
Koconverted test data (4.04 KB, application/vnd.oasis.opendocument.text)
2011-04-29 14:04 UTC, swathi
Details
More sane doc that shows the problem more clearly (12.20 KB, application/octet-stream)
2011-04-29 22:53 UTC, Camilla Boemann
Details
Screenshot in Latest calligra Words (130.94 KB, image/png)
2011-06-07 08:37 UTC, swathi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David Faure 2010-05-28 03:08:32 UTC


---- Reported by lassi.ta.nieminen@nokia.com 2009-09-09 11:41:23 +0300 ----

Created an attachment
msword test document to be opened in kword

SOFTWARE VERSION:
  Kubuntu 9.04
  Koffice (svn version 1021093)
  Test document (MS Word 2000): mw00_template_memo_wizard.doc

STEPS LEADING TO THE PROBLEM:
  1. Open the attached document in MS Word 2000.
  2. Open the same document in KOffice.
  3. Observe the paragraph border in the first page of
     the document.

EXPECTED OUTCOME:
  Kword should be able to display the border line below the 
  "RE" text in the document as seen in  attachment
    memo_wizard_border_place_msword_2000.PNG

ACTUAL OUTCOME:
  Kword displays the border line parallel to "RE" text
  in the document.
  see attachment memo_wizard_border_place_kword_svn_1021093.png

FREQUENCY:
  Always



---- Additional Comments From lassi.ta.nieminen@nokia.com 2009-09-09 11:41:58 +0300 ----

Created an attachment
screenshot of the document in kword



---- Additional Comments From lassi.ta.nieminen@nokia.com 2009-09-09 11:42:16 +0300 ----

Created an attachment
screenshot of the document in msword



---- Additional Comments From lassi.ta.nieminen@nokia.com 2009-12-04 10:35:43 +0200 ----

Reassigning bugs from Thomas to Lassi



---- Additional Comments From lassi.ta.nieminen@nokia.com 2010-02-25 15:39:52 +0200 ----

Changing severity to enhancement



---- Additional Comments From lassi.ta.nieminen@nokia.com 2010-03-10 12:52:30 +0200 ----

Moving to Community sub component



--- Bug imported by faure@kde.org 2010-05-28 03:08  ---

This bug was previously known as _bug_ 137971.

Imported an attachment (id=44498)
Imported an attachment (id=44499)
Imported an attachment (id=44500)

Unknown bug field "example" encountered while moving bug
   <example>2010-03-10 12:52:30</example>
Unknown Component Community
   Using default product and component set in Parameters 

Comment 1 swathi 2011-04-29 13:09:29 UTC
Created attachment 59421 [details]
Another test data with same issue

In latest words(git commit f3d5813c2196d85beb9e68655d46dc8364baa216),
paragraph borders are completely missing in the attached document.
Comment 2 Camilla Boemann 2011-04-29 13:14:47 UTC
could you please use koconverter to see if the problem is in filter or textlayout.
Comment 3 swathi 2011-04-29 14:04:22 UTC
Created attachment 59425 [details]
Koconverted test data

Borders are displaying fine in koconverted test data.
Comment 4 Camilla Boemann 2011-04-29 22:53:48 UTC
Created attachment 59444 [details]
More sane doc that shows the problem more clearly
Comment 5 swathi 2011-06-07 08:36:52 UTC
Tested in 9a54655da37b07ee9e670d9f537a8922afc26030,
In 3 attachments,for the 2 attachments para graph borders are displaying fine.
Where as for the test data mw00_paragraph_with_borders.doc borders are not displaying.So reopening the bug.
Comment 6 swathi 2011-06-07 08:37:31 UTC
Created attachment 60722 [details]
Screenshot in Latest calligra Words
Comment 7 Camilla Boemann 2011-09-10 16:30:58 UTC
msword and regular odt files behave differently

see commit c2afedb76746f4a936aca8f52a42ec9bbc6843ee

also it should be investigated if the msword filer is not producing padding info
Comment 8 Camilla Boemann 2011-10-11 20:41:58 UTC
Git commit 5ccb8668f925fb7a7232ee2a2909594aa377cd48 by C. Boemann.
Committed on 11/10/2011 at 20:32.
Pushed by boemann into branch 'master'.

Make sure borders are drawn even when scrolling

BUG:239175

M  +1    -1    libs/textlayout/KoTextLayoutArea_paint.cpp

http://commits.kde.org/calligra/5ccb8668f925fb7a7232ee2a2909594aa377cd48
Comment 9 swathi 2011-11-02 09:50:39 UTC
Verified in 9c203a706dc37927b69367b9c91d8f952fcf0b18.