Make sure borders are drawn even when scrolling

BUG:239175